--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "CHESSCLOCK",
-    "slug": "chessclock",
+    "name": "Chess clock",
+    "slug": "chess-clock",
     "privacy": "public",
     "sdkVersion": "32.0.0",
     "platforms": [
@@ -14,7 +14,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#b6bbb9"
+      "backgroundColor": "#1d1b1v"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -24,6 +24,9 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.svilpe.chessclock"
     }
   }
 }
