Chessclock: added icons, increment time, fixed issue with seconds and minutes addition

--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#1d1b1v"
+      "backgroundColor": "#1d1b1b"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
